[gd_scene load_steps=58 format=3 uid="uid://drkkl6jmo775f"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8l4h7"]
[ext_resource type="Texture2D" uid="uid://h1niksclbtfa" path="res://Art/Characters/player.png" id="2_e026c"]
[ext_resource type="AudioStream" uid="uid://dgws7plrqc3fe" path="res://Music/mixkit-fast-sword-whoosh-2792.wav" id="3_pk3lj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0i3mm"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axg2x"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq6sx"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dnqu"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i07bw"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m87jp"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv7er"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqb00"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq1a0"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkxen"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac0sn"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n2yj"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_udvtn"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhx5i"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk0o1"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5d3g"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydyqg"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2lu4"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3v8m"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyho6"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_estto"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7nlg"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqdmf"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybjhy"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbepd"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ake"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljbc0"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgb67"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvneh"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jplgr"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4ala"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_awbuj"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjnjg"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kopet"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8cmc"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2767x"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jigwo"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eqov"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6316a"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v24vw"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c0mx"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hlmv"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwqwq"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3w2j"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e55q3"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tev46"]
atlas = ExtResource("2_e026c")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw7p2"]
atlas = ExtResource("2_e026c")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bpxa"]
atlas = ExtResource("2_e026c")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smtij"]
atlas = ExtResource("2_e026c")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xnlv"]
atlas = ExtResource("2_e026c")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq81r"]
atlas = ExtResource("2_e026c")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwl1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i3mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axg2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq6sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dnqu")
}],
"loop": true,
"name": &"back_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i07bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m87jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv7er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqb00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq1a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkxen")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac0sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n2yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udvtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhx5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk0o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5d3g")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydyqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2lu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3v8m")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyho6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7nlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqdmf")
}],
"loop": true,
"name": &"front_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybjhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbepd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ake")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljbc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgb67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvneh")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jplgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4ala")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awbuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjnjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kopet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8cmc")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2767x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jigwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eqov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6316a")
}],
"loop": true,
"name": &"side_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v24vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c0mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hlmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwqwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3w2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e55q3")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tev46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw7p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bpxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smtij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xnlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq81r")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rref1"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_08sd7"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_8l4h7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_pwl1n")
animation = &"back_attack"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_rref1")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_08sd7")

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 415
limit_bottom = 191
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="hidden1_camera" type="Camera2D" parent="."]
position = Vector2(-1, 82)
enabled = false
zoom = Vector2(4, 4)
limit_left = -80
limit_top = 1
limit_right = 260
limit_bottom = 1
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.054902, 1, 0.243137, 1)
offset_left = -7.0
offset_top = 4.0
offset_right = 133.0
offset_bottom = 44.0
scale = Vector2(0.1, 0.1)
max_value = 200.0
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pk3lj")

[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
